[package]
name = "alphabit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rand = "0.3.14"
fltk = "^1.2"
confy = { version = "0.5.1", features = ["ron_conf"], default-features = false }
rodio = "0.16.0"